objects/Portal_Login_Page_Setup__c.object
<CustomObject>
    <fields>
        <fullName>BackToLogin__c</fullName>
        <label>Back To Login Page Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Main_Header__c</fullName>
        <label>Main Header</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PoralLoginHeader__c</fullName>
        <label>Poral Login Header</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Welcome_Message__c</fullName>
        <label>Welcome Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Portal Login Page Language Setup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>Main_Header__c</columns>
        <columns>PoralLoginHeader__c</columns>
        <columns>Welcome_Message__c</columns>
        <columns>BackToLogin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLS-{00}</displayFormat>
        <label>Portal Login Page Language Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Login Page Language Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>